Botão que muda cor do fundo

--- a/estilo.css
+++ b/estilo.css
@@ -20,3 +20,11 @@ p{
 h1{
     color: red;
 }
+button{
+    background-color: gray  ;
+    margin-left: 10%;
+    height: 100px;
+    width: 90px;
+    border: none;
+    border-radius: 15%;
+}
