--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,9 @@ section{
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-    margin: 10%;
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-right: 16%;
 }
 p{
     color: white;
@@ -19,6 +21,7 @@ p{
 }
 h1{
     color: red;
+    font-size: 40px;
 }
 button{
     background-color: gray  ;
